--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -9,9 +9,12 @@
 }
 
 .Question--headline {
-    align-items: center;
-    display: flex;
     flex: 1;
+}
+.Question--headline > * {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
     font-size: 1.4em;
 }
 
