Add fading to movie poster when the question is about movie title

--- a/client/src/components/Hint/Hint.css
+++ b/client/src/components/Hint/Hint.css
@@ -34,6 +34,7 @@
     padding: 4px;
     position: absolute;
     top: 10px;
+    z-index: 1;
 }
 
 .Hint--value {
@@ -48,4 +49,9 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+}
+
+.Hint--image__blurred {
+    filter: blur(5px);
+    background-size: cover;
 }
