--- a/client/src/components/Summary/Summary.css
+++ b/client/src/components/Summary/Summary.css
@@ -28,3 +28,15 @@
     font-size: 1.5em;
 }
 
+.Summary--start-again {
+    text-align: center;
+    padding: 20px;
+}
+.Summary--start-again button {
+    background: rgba(255, 255, 255, 0.3);
+    font-family: 'Atma', sans-serif;
+    color: white;
+    border: none;
+    font-size: 2em;
+    padding: 0.5em;
+}
