--- a/client/src/components/Summary/Summary.css
+++ b/client/src/components/Summary/Summary.css
@@ -22,6 +22,7 @@
 .Summary--header {
     font-size: 3em;
     margin-bottom: 0.5em;
+    line-height: 1.2em;
 }
 
 .Summary--points {
@@ -37,6 +38,7 @@
     font-family: 'Atma', sans-serif;
     color: white;
     border: none;
+    border-radius: 4px;
     font-size: 2em;
     padding: 0.5em;
 }
