Display correct answer in the result screen

--- a/client/src/components/Result/Result.css
+++ b/client/src/components/Result/Result.css
@@ -16,8 +16,13 @@
     background: #f96b61;
 }
 
+.Result--answer {
+    font-size: 1.2em;
+}
+
 .Result--header {
     font-size: 3em;
+    line-height: 1.2;
     margin-bottom: 0.5em;
 }
 
