--- a/client/src/components/Question/Question.css
+++ b/client/src/components/Question/Question.css
@@ -10,7 +10,7 @@
 }
 
 .Question--question {
-    font-size: calc(25px + 5 * ((100vw - 400px) / 200));
+    font-size: calc(23px + 5 * ((100vw - 400px) / 200));
     font-family: 'Atma', sans-serif;
     line-height: 1.1;
     color: white;
@@ -55,11 +55,6 @@
     flex: 1;
 }
 
-.Question--answers,
-.Question--hints {
-    padding: 0 10px 10px 0;
-}
-
 .Question--answers {
     background-color: rgba(0, 0, 0, 0.2);
 }
@@ -67,7 +62,24 @@
 .Question--answer-wrapper,
 .Question--hint-wrapper {
     flex: 0 1 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.Question--answer-wrapper {
+    padding: 5px 0 0 5px;
+}
+
+.Question--answers {
+    padding: 0 5px 5px 0;
+}
+
+.Question--hint-wrapper {
     padding: 10px 0 0 10px;
+}
+
+.Question--hints {
+    padding: 0 10px 10px 0;
 }
 
 .Question--answer {
@@ -77,5 +89,5 @@
     border: none;
     padding: 0.5em;
     width: 100%;
-    height: 100%;
+    height: 50px;
 }
