--- a/client/src/components/QuestionIntro/QuestionIntro.css
+++ b/client/src/components/QuestionIntro/QuestionIntro.css
@@ -16,7 +16,7 @@
 
 .QuestionIntro--map {
     width: 100%;
-    height: 100%;
+    flex: 1;
     animation: fadein 1.5s;
     animation-name: fadein;
     animation-duration: 1s;
@@ -25,6 +25,8 @@
 .QuestionIntro-map-wrapper {
     flex: 1;
     background-size: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 @keyframes fadein {
