Adjust background height

--- a/client/src/components/Skyline/Skyline.css
+++ b/client/src/components/Skyline/Skyline.css
@@ -5,6 +5,6 @@
     width: 100vw;
     background-repeat: repeat-x;
     background-position: bottom center;
-    background-size: 400px;
+    background-size: 50vh;
     background-color: #f5d971;
 }
